# ldstAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deploy/: deploy.sh  docker-compose.prod.yml
docs/: deploy-wen-zi.com.md
src/slack_excel_bot/: app.py  config.py  debug_trace.py  ekispert_client.py  excel_tools.py  excel_writer.py  openai_agent.py  slack_bot.py  socket_mode.py  template_loader.py  template_schema.py  thread_draft_store.py  tool_schemas.py
src/slack_excel_bot/templates/: __init__.py  registry.json
src/slack_excel_bot/templates/files/: Ldjpw668_2602_部署コード_社員番号_氏名.xlsx  精算書_集（交通費）_氏名_YYYYMM.xlsx  精算書_集（個人経費立替）_氏名_YYYYMM.xlsx
src/slack_excel_bot/templates/mappings/: personal_expense_jp_leadingsoft_v1.yaml  timesheet_jp_leadingsoft_v1.yaml  transport_jp_leadingsoft_v1.yaml  type Tool = {.ts
tests/: test_excel_writer.py  test_slack_bot.py  test_thread_draft_store.py
